0030729: Visualization - TKOpenGl reports OpenGL 4.5 loading functions error on Intel drivers

Make reported error more verbose.